# tufa_project

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  GeneratePostgresqlCrud.rs  IMPROVEMENT_PLAN.md  NAMING.md  README.md  clippy.toml  crate_usages.txt  deny.toml  find_crates.py  generate_imports.py  handle.rs  help.txt  ide_configuration.md  postgresqlupdjsonexample.json  refactor.py  refactor_dry.py  refactor_limited.py  rust_variables.txt  rustfmt.toml  setup.md  test_refactor.py  testsource.txt  testsource4.txt  thoughts.md  todo.md  usefull.md  variable_names.txt  wtf.rs
app_state/: Cargo.toml
app_state/src/: get_postgres_pool.rs  lib.rs
client/: Cargo.toml  global.css
client/src/: lib.rs  main.rs  store.rs  test3.html
cmn_routes/: Cargo.toml
cmn_routes/src/: lib.rs
common/: Cargo.toml
common/src/: app_state.rs  config.rs  dev.rs  example.http  example.rs  lib.rs  server_app_state.rs  table_example.rs
common_routes/: Cargo.toml
common_routes/src/: git_info.rs  health_check.rs  lib.rs  not_found.rs
config_lib/: Cargo.toml
config_lib/gen_getter_traits_for_struct_fields/: Cargo.toml
config_lib/generate_getter_traits_for_struct_fields/: Cargo.toml
config_lib/init_from_env/: Cargo.toml
config_lib/server_port/: Cargo.toml
config_lib/server_port_try_from_u16/: Cargo.toml
config_lib/src/: config_fields.rs  lib.rs  source_place_type.rs  str_from_enum_macros.rs  types.rs  user_port.rs
config_lib/try_from_env/: Cargo.toml
display_foreign_type/: Cargo.toml
display_foreign_type/src/: lib.rs
enum_extension_lib/: Cargo.toml
enum_extension_lib/enum_extension/: Cargo.toml
enum_extension_lib/src/: lib.rs
er_occurence_test/: Cargo.toml
er_occurence_test/src/: main.rs
error_occurence_lib/: .gitignore  Cargo.toml
error_occurence_lib/error_occurence/: Cargo.toml
error_occurence_lib/src/: code_occurence.rs  code_occurence_prepare_for_log.rs  display_foreign_type.rs  error_log.rs  error_occurence_named.rs  error_occurence_unnamed.rs  form_error_path.rs  get_additional_string.rs  get_code_occurence.rs  get_code_path.rs  get_code_path_without_config.rs  get_column.rs  get_commit.rs  get_duration.rs  get_file.rs  get_git_source_file_link.rs  get_line.rs  git_fields.rs  git_info.rs  hashmap_display_display_foreign_type_into_hashmap_display_string.rs  hashmap_display_display_foreign_type_into_hashmap_string_string.rs  hashmap_display_display_foreign_type_to_string.rs  hashmap_display_display_into_hashmap_display_string.rs  hashmap_display_display_into_hashmap_string_display.rs  hashmap_display_display_into_hashmap_string_string.rs  hashmap_display_display_to_string.rs  hashmap_display_foreign_type_display_foreign_type_into_hashmap_string_display_foreign_type.rs  hashmap_display_foreign_type_display_foreign_type_into_hashmap_string_string.rs  hashmap_display_foreign_type_display_foreign_type_to_string.rs  hashmap_display_foreign_type_display_into_hashmap_string_display.rs  hashmap_display_foreign_type_display_into_hashmap_string_string.rs  hashmap_display_foreign_type_display_to_string.rs  hashmap_display_foreign_type_to_string_with_config_to_string.rs  hashmap_display_foreign_type_to_string_without_config_to_string.rs  hashmap_display_to_std_string_string_into_hashmap_display_string.rs  hashmap_display_to_std_string_string_into_hashmap_string_string.rs  hashmap_display_to_std_string_string_to_string.rs  hashmap_display_to_string_with_config_to_string.rs  hashmap_display_to_string_without_config_to_string.rs  hashmap_to_std_string_string_display_into_hashmap_string_display.rs  (+24 more)
error_occurence_test/: .env  Cargo.toml
error_occurence_test/src/: lib.rs  main.rs
file_system/: Cargo.toml
file_system/src/: cr_dir_if_it_doesnt_exist.rs  cr_dirs_and_write_file.rs  cr_dirs_and_write_pretty_json.rs  create_dir_if_it_doesnt_exist.rs  create_dirs_and_write_file.rs  create_dirs_and_write_pretty_json.rs  lib.rs
from_sqlx_postgres_error/: Cargo.toml
from_sqlx_postgres_error/src/: lib.rs
from_str/: Cargo.toml
from_str/src/: lib.rs
gen_quotes/: Cargo.toml
gen_quotes/src/: lib.rs
git_info/: Cargo.toml
git_info/compile_time_git_info/: Cargo.toml
git_info/src/: lib.rs
git_sync_command/: Cargo.toml  README.md
git_sync_command/src/: main.rs
impl_display_as_debug/: Cargo.toml
impl_display_as_debug/src/: lib.rs
loc_lib/: Cargo.toml
loc_lib/loc_test/: Cargo.toml
loc_lib/location/: Cargo.toml
loc_lib/src/: lib.rs  loc.rs
loc_test/: .env  Cargo.toml
loc_test/src/: main.rs
location_lib/: Cargo.toml
location_lib/location/: Cargo.toml
location_lib/src/: code_occurence.rs  lib.rs  loc.rs
location_test/: Cargo.toml
location_test/src/: main.rs
macros_assistants/: Cargo.toml
macros_assistants/src/: lib.rs
macros_helpers/: Cargo.toml
macros_helpers/gen_derive_ts_builder/: Cargo.toml
macros_helpers/gen_struct_or_enum_derive_ts_builder/: Cargo.toml
macros_helpers/generate_struct_or_enum_derive_token_stream_builder/: Cargo.toml
macros_helpers/generate_struct_or_enum_derive_ts_builder/: Cargo.toml
macros_helpers/src/: attr_ident_str.rs  attribute_ident_str.rs  attribute_ident_stringified.rs  code_occurence_syn_field.rs  derive_ts_builder.rs  enum_variants.rs  er_occurence.rs  error_occurence.rs  gen_field_code_occurence_new_ts.rs  gen_field_loc_new_ts.rs  gen_if_write_is_err_ts.rs  gen_impl_default_ts.rs  gen_impl_dflt_ts.rs  gen_impl_display_ts.rs  gen_impl_error_occurence_lib_to_err_string_ts.rs  gen_impl_error_occurence_lib_to_std_string_string_ts.rs  gen_impl_from_ts.rs  gen_impl_std_convert_from_ts.rs  gen_impl_std_convert_try_from_ts.rs  gen_impl_std_fmt_display_ts.rs  gen_impl_to_err_string_ts.rs  gen_impl_try_from_ts.rs  gen_new_or_try_new.rs  gen_pub_type_al_ts.rs  gen_pub_type_alias_ts.rs  gen_simple_syn_punct.rs  gen_simple_syn_punctuated_punctuated.rs  gen_std_default_default_ts.rs  generate_field_code_occurence_new_token_stream.rs  generate_field_code_occurence_new_ts.rs  (+46 more)
naming/: Cargo.toml
naming_constants/: Cargo.toml
optimal_pack/: Cargo.toml
optml/: Cargo.toml
pg_crud/: Cargo.toml
(+1891 files in other folders)
