[workspace]
members = [
  "git_sync_command",
  "src/proc_macros/enum_extension",
  "src/proc_macros/error_display",
  "src/proc_macros/gen_enum",
  "src/proc_macros/gen_enum_without_values",
  "src/proc_macros/git_info",
  "src/proc_macros/impl_box_err_source_from_err",
  "src/proc_macros/impl_display",
  "src/proc_macros/impl_display_for_error_struct",
  "src/proc_macros/impl_display_for_simple_error_enum",
  "src/proc_macros/impl_error_with_tracing_for_struct_with_get_source_with_get_where_was",
  "src/proc_macros/impl_error_with_tracing_for_struct_with_get_source_without_get_where_was",
  "src/proc_macros/impl_error_with_tracing_for_struct_without_get_source",
  "src/proc_macros/impl_from_for_upper_struct",
  "src/proc_macros/impl_get_source_with_method",
  "src/proc_macros/impl_get_source_without_method",
  "src/proc_macros/impl_get_where_was_one_or_many_with_method",
  "src/proc_macros/impl_get_where_was_one_or_many_one_for_error_struct",
  "src/proc_macros/init_error",
  "src/proc_macros/init_from_env",
  "src/proc_macros/init_from_env_with_panic_if_failed",
  "src/proc_macros/provider_kind_from_config",
  "src/proc_macros/struct_field_getter",
  "src/proc_macros/struct_field_setter",
  "src/proc_macros/svg_component",
  "src/tufa_client",
  "src/tufa_common",
  "src/tufa_server",
  "src/tufa_telegram_bot",
  "src/tufa_grpc_client",
  "src/tufa_grpc_server",
]
# exclude = [
#   "your_exclude_member_here",
# ]
